k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: a5df645cbfc89471583c68d818ef816c-1044778620.us-east-1.elb.amazonaws.com
      http:
        paths:
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8000
